<resources>
    <string name="app_name">Библиотека</string>
    <string name="registration">Регистрация</string>
    <string name="view_library">Просмотр библиотеки</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="ready">Зарегистрироваться</string>
    <string name="entrance">Войти</string>
    <string name="search">Поиск</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="order">Заказать</string>
</resources>
