<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_view"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/registration"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="425dp"
        android:onClick="onClickBtnRegistration"
        android:text="@string/registration"
        android:textColor="@color/main_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/authorization"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:onClick="onClickBtnAuthorization"
        android:text="@string/authorization"
        android:textColor="@color/main_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/viewLibrary"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:onClick="onClickBtnViewLibrary"
        android:text="@string/view_library"
        android:textColor="@color/main_text"
        android:textStyle="bold" />

</LinearLayout>