<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/registration_view">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginStart="20dp"
        android:text="@string/login"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/password"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="15"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registration"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:onClick="onClickBtnAuthorization"
            android:text="@string/entrance"
            android:textColor="@color/main_text"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnExit"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:onClick="onClickBtnExit"
            android:text="@string/exit"
            android:textColor="@color/main_text"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>